fixing overflow

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   margin: 0 auto;
   padding: var(--space-2xl) var(--size-gutter);
+  overflow-x: hidden;
 }
 
 .navigation {
